Added core CSS, images, and html files.

--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -3,3 +3,11 @@ Author: Nicholas Fazzolari
 
 This file contains the color variables for my personal portfolio site.
 */
+
+// Shades
+$light_grey: #f5f5f5;
+$medium_grey: #e0e0e0;
+$dark_grey: #262626;
+
+// Greens
+$brand_green: #00c853;
