--- a/sass/_font_stack.scss
+++ b/sass/_font_stack.scss
@@ -3,3 +3,25 @@ Author: Nichoals Fazzolari
 
 This file contains the font stack configuration for my portfolio site.
 */
+
+.soleil-light {
+    font-family: soleil, sans-serif;
+    font-weight: 300;
+    font-style: normal;
+}
+
+.soleil-regular {
+    font-family: soleil, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.soleil-extrabold {
+    font-family: soleil, sans-serif;
+    font-weight: 800;
+    font-style: normal;
+}
+
+.shrikhand {
+    font-family: 'Shrikhand', cursive;
+}
