--- a/css/styles.css
+++ b/css/styles.css
@@ -35,8 +35,27 @@ Author: Nicholas Fazzolari
 
 This file is the main style sheet for my portfolio site.
 */
-.test {
+body {
+  color: #262626;
   background-color: #e0e0e0;
+  height: 100vh !important;
+}
+
+.section-container {
+  background-color: #f5f5f5;
+}
+
+.section-heading-container {
+  background-color: #262626;
+  padding: 1em;
+}
+
+.section-heading-text {
+  color: #00c853;
+  border-left: solid 0.5rem;
+  border-left-color: #00c853;
+  padding-left: 0.5rem;
+  margin: 0;
 }
 
 /*# sourceMappingURL=styles.css.map */
