--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -7,7 +7,27 @@ This file is the main style sheet for my portfolio site.
 @use 'colors' as c;
 @use 'font_stack';
 
-
-.test {
+body {
+    color: c.$dark_grey;
     background-color: c.$medium_grey;
+    height: 100vh !important;
 }
+
+.section-container {
+    background-color: c.$light_grey;
+}
+
+.section-heading-container {
+    background-color: c.$dark_grey;
+    padding: 1em;
+}
+
+.section-heading-text {
+    color: c.$brand_green;
+    border-left: solid 0.5rem;
+    border-left-color: c.$brand_green;
+    padding-left: 0.5rem;
+    margin: 0;
+}
+
+// Hello
