--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,36 @@ This file contains the font stack configuration for my portfolio site.
 /*
 Author: Nicholas Fazzolari
 
+This file contains custom link styles for my portfolio site.
+*/
+.navlink-custom a {
+  color: #262626;
+  font-size: 2.5rem;
+  text-decoration: none;
+  border-bottom: 0.25rem solid transparent;
+}
+
+.navlink-custom a:visited {
+  color: #262626;
+  font-size: 2.5rem;
+  text-decoration: none;
+  border-bottom: 0.25rem solid transparent;
+}
+
+.navlink-custom a:hover {
+  color: #262626;
+  font-size: 2.5rem;
+  text-decoration: none;
+  border-bottom: 0.25rem solid #00c853;
+}
+
+.navlink-custom-padder {
+  padding-left: 1.5rem;
+}
+
+/*
+Author: Nicholas Fazzolari
+
 This file is the main style sheet for my portfolio site.
 */
 body {
