--- a/sass/_custom_links.scss
+++ b/sass/_custom_links.scss
@@ -1,31 +1,29 @@
-/*
-Author: Nicholas Fazzolari
-
-This file contains custom link styles for my portfolio site.
-*/
+/* _custom_links.scss implements custom link styles */
 
 @use 'colors' as c;
 
-.navlink-custom a {
+.navlink-custom {
+  a {
     color: c.$dark_grey;
     font-size: 2.5rem;
     text-decoration: none;
     border-bottom: 0.25rem solid transparent;
   }
-  
-  .navlink-custom a:visited {
+
+  a:visited {
     color: c.$dark_grey;
     font-size: 2.5rem;
     text-decoration: none;
     border-bottom: 0.25rem solid transparent;
   }
-  
-  .navlink-custom a:hover {
+
+  a:hover {
     color: c.$dark_grey;
     font-size: 2.5rem;
     text-decoration: none;
     border-bottom: 0.25rem solid c.$brand_green;
   }
+}
 
   .navlink-custom-padder {
     padding-left: 1.5rem;
