--- a/sass/_font_stack.scss
+++ b/sass/_font_stack.scss
@@ -1,8 +1,4 @@
-/*
-Author: Nichoals Fazzolari
-
-This file contains the font stack configuration for my portfolio site.
-*/
+/* _font_stack.scss implements global font styles */
 
 .soleil-light {
     font-family: soleil, sans-serif;
