--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -1,8 +1,4 @@
-/*
-Author: Nicholas Fazzolari
-
-This file contains the color variables for my personal portfolio site.
-*/
+/* _colors.scss implements global color variables */
 
 // Shades
 $light_grey: #f5f5f5;
