--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -5,30 +5,10 @@ This file is the main style sheet for my portfolio site.
 */
 
 @use 'colors' as c;
+@use 'container_styles';
 @use 'font_stack';
 @use 'custom_links';
 
-body {
-    color: c.$dark_grey;
-    background-color: c.$medium_grey;
-    height: 100vh !important;
+.mercy {
+    color: purple;
 }
-
-.section-container {
-    background-color: c.$light_grey;
-}
-
-.section-heading-container {
-    background-color: c.$dark_grey;
-    padding: 1em;
-}
-
-.section-heading-text {
-    color: c.$brand_green;
-    border-left: solid 0.5rem;
-    border-left-color: c.$brand_green;
-    padding-left: 0.5rem;
-    margin: 0;
-}
-
-// Hello
