--- a/sass/_container_styles.scss
+++ b/sass/_container_styles.scss
@@ -24,3 +24,11 @@ body {
     padding-left: 0.5rem;
     margin: 0;
 }
+
+.topic-heading-text {
+    color: c.$dark_grey;
+    border-left: solid 0.5rem;
+    border-left-color: c.$brand_green;
+    padding-left: 0.5rem;
+    margin: 0;
+}
