--- a/sass/_custom_links.scss
+++ b/sass/_custom_links.scss
@@ -25,7 +25,39 @@
   }
 }
 
-  .navlink-custom-padder {
+.download-button {
+  a {
+    color: c.$brand_green;
+    background-color: c.$dark_grey;
+    font-size: 2.5rem;
+    text-decoration: none;
+  }
+
+  a:visited {
+    color: c.$brand_green;
+    background-color: c.$dark_grey;
+    font-size: 2.5rem;
+    text-decoration: none;
+  }
+
+  a:hover {
+    color: c.$medium_grey;
+    background-color: c.$dark_grey;
+    font-size: 2.5rem;
+    text-decoration: none;
+  }
+
+}
+
+.rempadder-1 {
+  padding: 1rem;
+}
+
+.remmargin-1 {
+  margin: 1rem;
+}
+
+.navlink-custom-padder {
     padding-left: 0.75rem;
     padding-right: 0.75rem;
-  }
+}
